[package]
name = "nucleo-h743zi"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"
categories = ["embedded", "hardware-support", "no-std"]
description = "Examples programs for nucleo-H743zi board"
keywords = ["arm", "cortex-m", "stm32h7xx", "hal"]
license = "0BSD"
repository = "https://github.com/astraw/nucleo-h743zi"

[dependencies]
cortex-m-rt = "0.6.12"
cortex-m = "0.7.1"
embedded-hal = "0.2.6"
panic-halt = "0.2"
nb = "1.0.0"
stm32h7xx-hal = { version="0.10.0", features=["stm32h743v"] }

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
