[package]
name = "nucleo-h743zi"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"
categories = ["embedded", "hardware-support", "no-std"]
description = "Example programs for nucleo-H743zi and nucleo-H743zi2 boards"
keywords = ["arm", "cortex-m", "stm32h7xx", "hal"]
license = "0BSD"
repository = "https://github.com/astraw/nucleo-h743zi"

[dependencies]
cortex-m-rt = "0.6.15"
cortex-m = "0.7.1"
embedded-hal = "0.2.6"
nb = "1.0.0"
stm32h7xx-hal = { version="0.11", features=["stm32h743v"] }
defmt = "0.3.1"
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
cortex-m-rtic = "1.0.0"

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
